# game-engine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLM.cmake
engine/: Camera2D.cpp  Camera2D.h  Color.h  Engine.cpp  Engine.h  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  MainGame.cpp  MainGame.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  UV.h  Vertex.h  Window.cpp  Window.h  main.cpp  picopng.cpp  picopng.h
engine/shaders/: colorShading.frag  colorShading.vert
sample-game/: MainGame.cpp  MainGame.h
sample-game/shaders/: colorShading.frag
script-modules/: .npmignore  README.md  package.json
script-modules/sample/: binding.gyp  myobject.cpp  myobject.h  package.json  sample-wrapper.js  sample.cpp  sample.js
script-modules/test/: sample.js
src/: Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  MainGame.cpp  MainGame.h  Position.h  Sprite.cpp  Vertex.h  main.cpp  picopng.cpp  platform-import.cpp
src/shaders/: colorShading.frag  colorShading.vert
